--- a/data/TMT_data/00_raw_data_preprocessing.ipynb
+++ b/data/TMT_data/00_raw_data_preprocessing.ipynb
@@ -2,50 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message:\n",
-      "“package ‘tidyverse’ was built under R version 4.2.2”\n",
-      "Warning message:\n",
-      "“package ‘ggplot2’ was built under R version 4.2.3”\n",
-      "Warning message:\n",
-      "“package ‘tibble’ was built under R version 4.2.3”\n",
-      "Warning message:\n",
-      "“package ‘tidyr’ was built under R version 4.2.2”\n",
-      "Warning message:\n",
-      "“package ‘readr’ was built under R version 4.2.2”\n",
-      "Warning message:\n",
-      "“package ‘purrr’ was built under R version 4.2.3”\n",
-      "Warning message:\n",
-      "“package ‘dplyr’ was built under R version 4.2.3”\n",
-      "Warning message:\n",
-      "“package ‘stringr’ was built under R version 4.2.3”\n",
-      "Warning message:\n",
-      "“package ‘forcats’ was built under R version 4.2.2”\n",
-      "Warning message:\n",
-      "“package ‘lubridate’ was built under R version 4.2.2”\n",
-      "── \u001b[1mAttaching core tidyverse packages\u001b[22m ──────────────────────── tidyverse 2.0.0 ──\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mdplyr    \u001b[39m 1.1.2     \u001b[32m✔\u001b[39m \u001b[34mreadr    \u001b[39m 2.1.4\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mforcats  \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mstringr  \u001b[39m 1.5.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mggplot2  \u001b[39m 3.4.2     \u001b[32m✔\u001b[39m \u001b[34mtibble   \u001b[39m 3.2.1\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mlubridate\u001b[39m 1.9.2     \u001b[32m✔\u001b[39m \u001b[34mtidyr    \u001b[39m 1.3.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.1     \n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\u001b[36mℹ\u001b[39m Use the conflicted package (\u001b[3m\u001b[34m<http://conflicted.r-lib.org/>\u001b[39m\u001b[23m) to force all conflicts to become errors\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "library(tidyverse)\n",
     "source(\"../../evaluation_utils/preprocessing_raw/preprocessing_report.R\")"
@@ -60,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -77,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -197,6 +160,138 @@
     "\n",
     "head(metadata, 3)\n",
     "dim(metadata)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\u001b[22m`summarise()` has grouped output by 'Pool'. You can override using the\n",
+      "`.groups` argument.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A grouped_df: 18 × 3</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>Pool</th><th scope=col>Group</th><th scope=col>n</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>Pool1</td><td>Common Reference</td><td>1</td></tr>\n",
+       "\t<tr><td>Pool1</td><td>FSGS            </td><td>5</td></tr>\n",
+       "\t<tr><td>Pool1</td><td>heathy          </td><td>5</td></tr>\n",
+       "\t<tr><td>Pool2</td><td>Common Reference</td><td>1</td></tr>\n",
+       "\t<tr><td>Pool2</td><td>FSGS            </td><td>5</td></tr>\n",
+       "\t<tr><td>Pool2</td><td>heathy          </td><td>5</td></tr>\n",
+       "\t<tr><td>Pool3</td><td>Common Reference</td><td>1</td></tr>\n",
+       "\t<tr><td>Pool3</td><td>FSGS            </td><td>4</td></tr>\n",
+       "\t<tr><td>Pool3</td><td>heathy          </td><td>5</td></tr>\n",
+       "\t<tr><td>Pool4</td><td>Common Reference</td><td>1</td></tr>\n",
+       "\t<tr><td>Pool4</td><td>FSGS            </td><td>5</td></tr>\n",
+       "\t<tr><td>Pool4</td><td>heathy          </td><td>5</td></tr>\n",
+       "\t<tr><td>Pool5</td><td>Common Reference</td><td>1</td></tr>\n",
+       "\t<tr><td>Pool5</td><td>FSGS            </td><td>5</td></tr>\n",
+       "\t<tr><td>Pool5</td><td>heathy          </td><td>5</td></tr>\n",
+       "\t<tr><td>Pool6</td><td>Common Reference</td><td>1</td></tr>\n",
+       "\t<tr><td>Pool6</td><td>FSGS            </td><td>5</td></tr>\n",
+       "\t<tr><td>Pool6</td><td>heathy          </td><td>5</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A grouped\\_df: 18 × 3\n",
+       "\\begin{tabular}{lll}\n",
+       " Pool & Group & n\\\\\n",
+       " <chr> & <chr> & <int>\\\\\n",
+       "\\hline\n",
+       "\t Pool1 & Common Reference & 1\\\\\n",
+       "\t Pool1 & FSGS             & 5\\\\\n",
+       "\t Pool1 & heathy           & 5\\\\\n",
+       "\t Pool2 & Common Reference & 1\\\\\n",
+       "\t Pool2 & FSGS             & 5\\\\\n",
+       "\t Pool2 & heathy           & 5\\\\\n",
+       "\t Pool3 & Common Reference & 1\\\\\n",
+       "\t Pool3 & FSGS             & 4\\\\\n",
+       "\t Pool3 & heathy           & 5\\\\\n",
+       "\t Pool4 & Common Reference & 1\\\\\n",
+       "\t Pool4 & FSGS             & 5\\\\\n",
+       "\t Pool4 & heathy           & 5\\\\\n",
+       "\t Pool5 & Common Reference & 1\\\\\n",
+       "\t Pool5 & FSGS             & 5\\\\\n",
+       "\t Pool5 & heathy           & 5\\\\\n",
+       "\t Pool6 & Common Reference & 1\\\\\n",
+       "\t Pool6 & FSGS             & 5\\\\\n",
+       "\t Pool6 & heathy           & 5\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A grouped_df: 18 × 3\n",
+       "\n",
+       "| Pool &lt;chr&gt; | Group &lt;chr&gt; | n &lt;int&gt; |\n",
+       "|---|---|---|\n",
+       "| Pool1 | Common Reference | 1 |\n",
+       "| Pool1 | FSGS             | 5 |\n",
+       "| Pool1 | heathy           | 5 |\n",
+       "| Pool2 | Common Reference | 1 |\n",
+       "| Pool2 | FSGS             | 5 |\n",
+       "| Pool2 | heathy           | 5 |\n",
+       "| Pool3 | Common Reference | 1 |\n",
+       "| Pool3 | FSGS             | 4 |\n",
+       "| Pool3 | heathy           | 5 |\n",
+       "| Pool4 | Common Reference | 1 |\n",
+       "| Pool4 | FSGS             | 5 |\n",
+       "| Pool4 | heathy           | 5 |\n",
+       "| Pool5 | Common Reference | 1 |\n",
+       "| Pool5 | FSGS             | 5 |\n",
+       "| Pool5 | heathy           | 5 |\n",
+       "| Pool6 | Common Reference | 1 |\n",
+       "| Pool6 | FSGS             | 5 |\n",
+       "| Pool6 | heathy           | 5 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "   Pool  Group            n\n",
+       "1  Pool1 Common Reference 1\n",
+       "2  Pool1 FSGS             5\n",
+       "3  Pool1 heathy           5\n",
+       "4  Pool2 Common Reference 1\n",
+       "5  Pool2 FSGS             5\n",
+       "6  Pool2 heathy           5\n",
+       "7  Pool3 Common Reference 1\n",
+       "8  Pool3 FSGS             4\n",
+       "9  Pool3 heathy           5\n",
+       "10 Pool4 Common Reference 1\n",
+       "11 Pool4 FSGS             5\n",
+       "12 Pool4 heathy           5\n",
+       "13 Pool5 Common Reference 1\n",
+       "14 Pool5 FSGS             5\n",
+       "15 Pool5 heathy           5\n",
+       "16 Pool6 Common Reference 1\n",
+       "17 Pool6 FSGS             5\n",
+       "18 Pool6 heathy           5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "metadata %>%\n",
+    "    group_by(Pool, Group) %>%\n",
+    "    summarise(n = n())"
    ]
   },
   {
@@ -378,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -394,24 +489,24 @@
     "      heathy_samples <- rownames(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ][sample(1:nrow(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ]), 2), ])\n",
     "      FSGS_samples <- rownames(metadata[metadata$Group == 'FSGS' & metadata$Pool == pool, ][sample(1:nrow(metadata[metadata$Group == 'FSGS' & metadata$Pool == pool, ]), 2), ])\n",
     "    } else if (pool == \"Pool2\") {\n",
-    "      heathy_samples <- rownames(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ][sample(1:nrow(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ]), 1), ])\n",
-    "      FSGS_samples <- rownames(metadata[metadata$Group == 'FSGS' & metadata$Pool == pool, ][sample(1:nrow(metadata[metadata$Group == 'FSGS' & metadata$Pool == pool, ]), 2), ])\n",
+    "      heathy_samples <- rownames(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ][sample(1:nrow(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ]), 2), ])\n",
+    "      FSGS_samples <- rownames(metadata[metadata$Group == 'FSGS' & metadata$Pool == pool, ][sample(1:nrow(metadata[metadata$Group == 'FSGS' & metadata$Pool == pool, ]), 1), ])\n",
     "    }\n",
     "  } else if (center == \"Center2\") {\n",
     "    if (pool == \"Pool3\") {\n",
-    "      heathy_samples <- rownames(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ][sample(1:nrow(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ]), 4), ])\n",
-    "      FSGS_samples <- rownames(metadata[metadata$Group == 'FSGS' & metadata$Pool == pool, ][sample(1:nrow(metadata[metadata$Group == 'FSGS' & metadata$Pool == pool, ]), 1), ])\n",
+    "      heathy_samples <- rownames(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ][sample(1:nrow(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ]),  1), ])\n",
+    "      FSGS_samples <- rownames(metadata[metadata$Group == 'FSGS' & metadata$Pool == pool, ][sample(1:nrow(metadata[metadata$Group == 'FSGS' & metadata$Pool == pool, ]), 4), ])\n",
     "    } else if (pool == \"Pool5\") {\n",
-    "      heathy_samples <- rownames(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ][sample(1:nrow(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ]), 3), ])\n",
-    "      FSGS_samples <- rownames(metadata[metadata$Group == 'FSGS' & metadata$Pool == pool, ][sample(1:nrow(metadata[metadata$Group == 'FSGS' & metadata$Pool == pool, ]), 2), ])\n",
+    "      heathy_samples <- rownames(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ][sample(1:nrow(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ]), 2), ])\n",
+    "      FSGS_samples <- rownames(metadata[metadata$Group == 'FSGS' & metadata$Pool == pool, ][sample(1:nrow(metadata[metadata$Group == 'FSGS' & metadata$Pool == pool, ]), 5), ])\n",
     "    }\n",
     "  } else if (center == \"Center3\") {\n",
     "    if (pool == \"Pool4\") {\n",
-    "      heathy_samples <- rownames(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ][sample(1:nrow(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ]), 5), ])\n",
+    "      heathy_samples <- rownames(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ][sample(1:nrow(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ]), 3), ])\n",
     "      FSGS_samples <- rownames(metadata[metadata$Group == 'FSGS' & metadata$Pool == pool, ][sample(1:nrow(metadata[metadata$Group == 'FSGS' & metadata$Pool == pool, ]), 5), ])\n",
     "    } else if (pool == \"Pool6\") {\n",
-    "      heathy_samples <- rownames(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ][sample(1:nrow(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ]), 5), ])\n",
-    "      FSGS_samples <- rownames(metadata[metadata$Group == 'FSGS' & metadata$Pool == pool, ][sample(1:nrow(metadata[metadata$Group == 'FSGS' & metadata$Pool == pool, ]), 4), ])\n",
+    "      heathy_samples <- rownames(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ][sample(1:nrow(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ]), 4), ])\n",
+    "      FSGS_samples <- rownames(metadata[metadata$Group == 'FSGS' & metadata$Pool == pool, ][sample(1:nrow(metadata[metadata$Group == 'FSGS' & metadata$Pool == pool, ]), 5), ])\n",
     "    }\n",
     "  } else {\n",
     "    stop(\"Invalid center or pool\")\n",
@@ -423,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {
     "vscode": {
      "languageId": "r"
